--- a/src/styles/css/commons/Button.module.css
+++ b/src/styles/css/commons/Button.module.css
@@ -1,5 +1,13 @@
 .localUser-join__footer-btn {
   width: 70%;
+}
+
+.localUser-login__footer-btn {
+  width: 80%;
+}
+
+.localUser-login__footer-btn,
+.localUser-join__footer-btn {
   height: 40px;
   border-radius: 5px;
   background-color: #2c2c2c;
