--- a/src/styles/css/commons/Input.module.css
+++ b/src/styles/css/commons/Input.module.css
@@ -1,3 +1,13 @@
+.localUser-login__email {
+  margin-bottom: 20px;
+}
+
+.localUser-login__email,
+.localUser-login__password {
+  width: 80%;
+  height: 40px;
+}
+
 .localUser-join__name,
 .localUser-join__email,
 .localUser-join__password,
@@ -6,10 +16,22 @@
 .localUser-join__mainAddress {
   width: 73%;
   height: 25px;
+}
+
+.localUser-login__email,
+.localUser-login__password,
+.localUser-join__name,
+.localUser-join__email,
+.localUser-join__password,
+.localUser-join__password2,
+.localUser-join__phoneNumber,
+.localUser-join__mainAddress {
   border: none;
   border-bottom: 1px solid #c2c2c2;
 }
 
+.localUser-login__email,
+.localUser-login__password,
 .localUser-join__name,
 .localUser-join__email,
 .localUser-join__password,
@@ -20,7 +42,8 @@
   padding-bottom: 10px;
   box-sizing: border-box;
 }
-
+.localUser-login__email,
+.localUser-login__password,
 .localUser-join__name,
 .localUser-join__email,
 .localUser-join__password,
