--- a/src/styles/css/components/Auth/Local/LocalAuthUser.module.css
+++ b/src/styles/css/components/Auth/Local/LocalAuthUser.module.css
@@ -1,13 +1,13 @@
-.localUser-join__header {
+.localUser-auth__header {
   width: 100%;
   margin-bottom: 50px;
 }
 
-.localUser-join__header--closeBtn {
+.localUser-auth__header--closeBtn {
   text-align: end;
 }
 
-.localUser-join__header--btn {
+.localUser-auth__header--btn {
   cursor: pointer;
   font-size: 20px;
   position: relative;
@@ -123,4 +123,51 @@ label > span {
   text-decoration: underline;
   color: #b6b6b6;
   cursor: pointer;
+}
+
+.localUser-login__form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.localUser-login__bottom-section {
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 15px 0 30px 0;
+}
+
+.localUser-login__save-account {
+  display: flex;
+  align-items: center;
+  font-size: 12px;
+}
+
+.localUser-login__recovery-section {
+  font-size: 11px;
+}
+
+.localUser-login__recovery-section :first-child {
+  margin-right: 15px;
+  cursor: pointer;
+}
+
+.localUser-login__recovery-section:last-child {
+  cursor: pointer;
+}
+
+.localUser-login__sns-list {
+  text-align: center;
+  margin-top: 100px;
+}
+
+.localUser-login_sns {
+  display: flex;
+  justify-content: space-around;
+  width: 200px;
+  margin: 25px auto 0 auto;
 }
