--- a/src/styles/css/components/Product/Product.module.css
+++ b/src/styles/css/components/Product/Product.module.css
@@ -1,5 +1,7 @@
-h3, h2, p {
+h3, h2, p, ul{
   margin: 0px;
+  padding: 0px;
+  list-style: none;
 }
 
 div {
@@ -9,5 +11,61 @@ div {
 .base {
   width: 90%;
   margin: 50px auto;
-  /*max-width: 1000px;*/
+  max-width: 1000px;
+  position: relative;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: repeat(4,minmax(0,1fr));
+  grid-column-gap: 8px;
+  grid-row-gap: 24px;
+  row-gap: 28px;
+}
+
+.filterBox {
+  display: flex;
+  justify-content: space-between;
+}
+
+.filterBox__filter {
+  display: inline-flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.selectDrop__cont {
+  position: absolute;
+  top: 80px;
+  right: 0;
+  width: 250px;
+}
+
+.selectDrop__list {
+  cursor: pointer;
+  background: rgba(255, 255, 255, 0.96);
+  box-shadow: rgba(0, 0, 0, 0.16) 0.8vw 0.8vw 2.66667vw 0vw;
+  border-radius: 13px;
+}
+
+.selectDrop__list__option {
+  padding: 13px 20px 12px 33px;
+  border-top: 1px solid rgb(233, 233, 233);
+  color: gray;
+}
+
+.selectDrop__list__option__check{
+  position: absolute;
+  left: 13px;
+}
+
+ul :nth-child(1) {
+  border-top: none;
+}
+
+
+@media screen and (max-width : 768px) { 
+  .container { 
+    grid-template-columns: repeat(2,minmax(0,1fr)); 
+  } 
 }
