--- a/src/styles/css/components/Header/Header.module.css
+++ b/src/styles/css/components/Header/Header.module.css
@@ -1,6 +1,8 @@
 /*Header.module.css*/
 
+/*font*/
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&family=Noto+Sans+KR&display=swap');
 
 .header {
   position: fixed;
@@ -11,10 +13,29 @@
   /*background-color: #f0eeee;*/
 }
 
+.contents {
+  display: flex;
+  width: 95%;
+  max-width: 1100px;
+  margin: 0 auto;
+  padding-top: 45px;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.logo {
+  font-family: 'Nanum Pen Script', cursive;
+  font-size: 45px;
+  margin: 0 auto;
+  color: #008e61;
+}
+
+/*상단 베너*/
 .banner {
+  position: fixed;
   width: 100%;
   height: 39px;
-  background-color: #B9B9B9;
+  background-color: #008e61;
 }
 
 p{
@@ -26,27 +47,45 @@ p{
   font-family: 'Noto Sans KR', sans-serif;
 }
 
-/*.icon {
+.icon {
   position: fixed;
   right: 30px;
   top: 11px;
-}
-*/
-
-.contents {
-  display: flex;
-  width: 95%;
-  max-width: 1100px;
-  margin: 0 auto;
-  padding-top: 20px;
-  align-items: center;
-  justify-content: space-between;
+  cursor: pointer;
 }
 
+/*모바일*/
+@media screen and (max-width: 768px) {
+  .logo {
+    position: relative;
+    font-family: 'Nanum Pen Script', cursive;
+    font-size: 33px;
+    margin: 0 auto;
+    color: #008e61;
+  }
+  .contents {
+    display: block;
+    width: 95%;
+    max-width: 1100px;
+    margin: 0 auto;
+    padding-top: 45px;
+  }
 
+  /*베너 텍스트*/
+  p{
+    text-align: center;
+    margin: 0 auto;
+    color: white;
+    padding-top: 10px;
+    font-size: 11px;
+    font-family: 'Noto Sans KR', sans-serif;
+  }
 
-.logo {
-  font-family: 'Nanum Pen Script', cursive;
-  font-size: 40px;
-  margin: 0 auto;
+  /*베너 아이콘*/
+  .icon {
+    position: fixed;
+    right: 30px;
+    top: 14px;
+    cursor: pointer;
+  }
 }
