--- a/src/styles/css/pages/TopMenu.module.css
+++ b/src/styles/css/pages/TopMenu.module.css
@@ -1,4 +1,4 @@
-/*categories.module.css*/
+/*TopMenu.module.css*/
 
 /*font*/
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&family=Noto+Sans+KR&display=swap');
