--- a/src/styles/css/components/Category/Category.module.css
+++ b/src/styles/css/components/Category/Category.module.css
@@ -2,7 +2,7 @@
 
 .category {
   width: 1230px;
-  height: 600px;
+  height: 300px;
   margin: 0 auto;
   padding-top: 50px;
 }
@@ -34,4 +34,45 @@
   margin: 0 auto;
   text-align: center;
   border-radius: 50%;
+}
+
+
+/*모바일*/
+@media screen and (max-width: 768px) {
+  .category {
+    width: 600px;
+    height: 600px;
+    /* margin: 0 auto; */
+    padding-top: 13px;
+  }
+  
+  .category_ul {
+    display: grid;
+    grid-template-columns: 120px 120px 120px 120px;
+    line-height: 25px;
+    margin-left: -39px;
+  }
+  
+  .category_item {
+    text-align: center;
+    margin: 0 auto;
+    width: 53px;
+    padding-bottom: 10px;
+    list-style-type : none;
+    
+  }
+  
+  .category_link {
+    text-decoration: none;
+    color: #666666;
+    font-size: 12px;
+  }
+  
+  .category_img {
+    width: 50px;
+    height: 50px;
+    margin: 0 auto;
+    text-align: center;
+    border-radius: 50%;
+  }
 }
