--- a/src/styles/css/pages/NavBarBox.module.css
+++ b/src/styles/css/pages/NavBarBox.module.css
@@ -1,4 +1,4 @@
-/*Banner.module.css*/
+/*NavBarBox.module.css*/
 
 /*font*/
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&family=Noto+Sans+KR&display=swap');
