--- a/src/styles/css/commons/Input.module.css
+++ b/src/styles/css/commons/Input.module.css
@@ -4,7 +4,8 @@
 
 .localUser-login__email,
 .localUser-login__password {
-  width: 80%;
+  width: 100%;
+  max-width: 800px;
   height: 40px;
 }
 
@@ -14,7 +15,7 @@
 .localUser-join__password2,
 .localUser-join__phoneNumber,
 .localUser-join__mainAddress {
-  width: 73%;
+  width: 100%;
   height: 25px;
 }
 
