--- a/src/styles/css/commons/Button.module.css
+++ b/src/styles/css/commons/Button.module.css
@@ -16,3 +16,23 @@
   cursor: pointer;
   font-size: 15px;
 }
+
+.product-detail__btn--cart,
+.product-detail__btn--payment {
+  height: 50px;
+  border: 1px solid #4e4e4e;
+  border-radius: 5px;
+  box-shadow: 0 4px 2px #e9e9e9;
+  cursor: pointer;
+}
+
+.product-detail__btn--cart {
+  width: 120px;
+  background-color: white;
+  color: black;
+}
+.product-detail__btn--payment {
+  width: 270px;
+  background-color: black;
+  color: white;
+}
