--- a/src/styles/css/commons/DefaultModal.module.css
+++ b/src/styles/css/commons/DefaultModal.module.css
@@ -1,12 +1,15 @@
 .modal-background {
   width: 100%;
-  height: 100vh;
-  position: absolute;
+  height: 100%;
+  position: fixed;
   background-color: rgba(0, 0, 0, 0.5);
   top: 0;
+  left: 0;
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 1;
+  cursor: auto;
 }
 
 .localUser-join {
@@ -26,4 +29,31 @@
   padding: 20px 40px;
   box-sizing: border-box;
   border-radius: 7px;
+}
+
+.Modal-baground__container {
+  width: 428px;
+  height: 330px;
+  background: white;
+  padding: 30px;
+  border-radius: 7px;
+}
+
+.Modal-baground__container h2 {
+  text-align: center;
+  font-weight: 500;
+  margin-top: 30px;
+}
+
+.InseideBag__container {
+  width: 428px;
+  height: 250px;
+  background: white;
+  padding: 30px;
+  border-radius: 7px;
+}
+
+.InseideBag__container h2{
+  text-align: center;
+  margin-top: 30px;
 }
