--- a/src/styles/css/components/Card/ProductItem.module.css
+++ b/src/styles/css/components/Card/ProductItem.module.css
@@ -1,11 +1,10 @@
-/*.container {
+.container {
   display: grid;
   grid-template-columns: repeat(4,minmax(0,1fr));
   grid-column-gap: 8px;
   grid-row-gap: 24px;
   row-gap: 28px;
-} 겉 div로 추가 해서 필요한 열 만큼 repeat 4 부분을 바꿔주면 됩니다 본인 페이지 css에서 
-적용해주세요 */
+} /*grid로 추가해주세요*/
 
 .productItem {
   width: 100%;
@@ -64,6 +63,10 @@
   width: 100%;
 }
 
+.productContent p {
+  margin: 0;
+}
+
 .productContent__sale {
   font-weight: 700;
   font-size: 18px;
@@ -78,4 +81,10 @@
 .productContent__salePrice {
   color: rgb(110 110 110);
   text-decoration:line-through;
+}
+
+@media screen and (max-width : 768px) { 
+  .container { 
+    grid-template-columns: repeat(2,minmax(0,1fr)); 
+  } 
 }
