--- a/src/styles/css/components/Product/ProductDetailInformation.module.css
+++ b/src/styles/css/components/Product/ProductDetailInformation.module.css
@@ -1,6 +1,5 @@
 .product-detail__information {
   width: 100%;
-  height: 100vh;
   background-color: #d9d9d9;
   display: flex;
   flex-direction: column;
@@ -9,19 +8,19 @@
 
 .product-detail__title {
   width: inherit;
-  height: 150px;
+  height: 100px;
   display: flex;
   justify-content: start;
   align-items: center;
   font-size: 20px;
   background-color: white;
-  margin-top: 100px;
   font-weight: bold;
+  margin-top: 100px;
 }
 
 .product-detail__information-container {
   width: inherit;
-  margin-top: 100px;
+  margin: 100px 0;
   text-align: center;
   background-color: white;
   padding: 10px 0;
