장바구니 모달 완료
장바구니 아이콘 클릭시 상품 추가 되는 것과 빠지는 것까지 모두 구현 완료

--- a/src/styles/css/commons/BagModal.module.css
+++ b/src/styles/css/commons/BagModal.module.css
@@ -3,12 +3,12 @@ p {
 }
 .product-content {
   display: flex;
-  margin-top: 20px;
+  margin-top: 5px;
   align-items: center;
 }
 
 .product-content__img {
-  width: 100px;
+  width: 50%;
   margin-right: 10px;
 }
 .product-content__text {
