--- a/src/styles/css/components/Product/Product.module.css
+++ b/src/styles/css/components/Product/Product.module.css
@@ -16,12 +16,14 @@ div {
   height: 150px;
   margin: auto;
   max-width: 1280px;
+  padding: 10px;
 }
 .header--icon {
   float: right;
   font-size: 30px;
   cursor: pointer;
   margin-top: 100px;
+  position: relative;
 }
 .base {
   width: 90%;
@@ -29,7 +31,6 @@ div {
   position: relative;
   max-width: 1280px;
 }
-
 
 .filterBox {
   display: flex;
@@ -48,6 +49,21 @@ div {
   right: 0;
   width: 250px;
   z-index: 10;
+}
+
+.alert-count {
+  width: 17px;
+  height: 17px;
+  background: #FF0000;
+  position: absolute;
+  color: white;
+  right: 0;
+  top: 0;
+  border-radius: 50%;
+  font-size: 15px;
+  font-weight: 600;
+  display: flex;
+  justify-content: center;
 }
 
 
