--- a/src/styles/css/components/Category/Category.module.css
+++ b/src/styles/css/components/Category/Category.module.css
@@ -1,47 +1,89 @@
 /*Category.module.css*/
 
-.category {
-  width: 1230px;
-  height: 300px;
-  margin: 0 auto;
-  padding-top: 50px;
+/* pc */
+@media screen and (min-width:1024px)  {
+  .category {
+    width: 1230px;
+    height: 200px;
+    margin: 0 auto;
+    padding-top: 50px;
+  }
+  
+  .category_ul {
+    display: flex;
+    line-height: 23px;
+  }
+  
+  .category_item {
+    text-align: center;
+    margin: 0 auto;
+    width: 78px;
+    list-style-type : none;
+  }
+  
+  .category_link {
+    text-decoration: none;
+    color: #666666;
+    font-size: 14px;
+    margin: 0 auto;
+  }
+  
+  .category_img {
+    width: 70px;
+    height: 70px;
+    margin: 0 auto;
+    text-align: center;
+    border-radius: 50%;
+  }
+  
 }
 
-.category_ul {
-  display: flex;
-  line-height: 23px;
-  margin-left: -50px;
-  /* gap: 10px 5px; */
+/*테블릿*/
+@media screen and (min-width:768px) and (max-width:1023px) {
+    .category {
+      position: relative;
+      top: 180px;
+      width: 1000px;
+      height: 200px;
+      margin: 0 auto;
+  }
+  
+  .category_ul {
+    display: flex;
+    line-height: 23px;
+    margin-left: -34px;
+    /* gap: 10px 5px; */
+  }
+  
+  .category_item {
+    text-align: center;
+    margin: 0 auto;
+    width: 78px;
+    list-style-type : none;
+   
+  }
+  
+  .category_link {
+    text-decoration: none;
+    color: #666666;
+    font-size: 14px;
+    margin: 0 auto;
+  }
+  
+  .category_img {
+    width: 70px;
+    height: 70px;
+    margin: 0 auto;
+    text-align: center;
+    border-radius: 50%;
+  }
 }
-
-.category_item {
-  text-align: center;
-  margin: 0 auto;
-  width: 78px;
-  list-style-type : none;
- 
-}
-
-.category_link {
-  text-decoration: none;
-  color: #666666;
-  font-size: 14px;
-}
-
-.category_img {
-  width: 70px;
-  height: 70px;
-  margin: 0 auto;
-  text-align: center;
-  border-radius: 50%;
-}
-
 
 /*모바일*/
 @media screen and (max-width: 768px) {
   .category {
     width: 600px;
-    height: 600px;
+    height: 200px;
     /* margin: 0 auto; */
     padding-top: 13px;
   }
@@ -66,6 +108,7 @@
     text-decoration: none;
     color: #666666;
     font-size: 12px;
+    margin: 0 auto;
   }
   
   .category_img {
