--- a/src/styles/css/components/Header/Header.module.css
+++ b/src/styles/css/components/Header/Header.module.css
@@ -4,71 +4,134 @@
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&family=Noto+Sans+KR&display=swap');
 
-.header {
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 202px;
-  background-color: #fff;
-}
 
-.contents {
-  display: flex;
-  width: 95%;
-  height: 110px;
-  max-width: 1195px;
-  margin: 0 auto;
-  padding-top: 45px;
-  align-items: center;
-  justify-content: space-between;
-  border-bottom: 2px solid #918D8C;
-}
+/* pc */
+@media screen and (min-width:1024px)  {
+  .header {
+    position: fixed;
+    z-index: 30;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 202px;
+    background-color: #fff;
+    /* overflow:hidden; */
+  }
+  
+  .contents {
+    display: flex;
+    width: 95%;
+    height: 110px;
+    max-width: 1195px;
+    margin: 0 auto;
+    padding-top: 45px;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 2px solid #918D8C;
+  }
+  
+  .logo {
+    font-family: 'Nanum Pen Script', cursive;
+    font-size: 45px;
+    margin: 0 auto;
+    color: #008e61;
+  }
+  
+  /* 상단 베너 */
+  .banner {
+    position: fixed;
+    width: 100%;
+    height: 39px;
+    background-color: #008e61;
+  } 
+  
+   /*베너 텍스트*/
+   .banner_text{
+    text-align: center;
+    margin: 0 auto;
+    color: white;
+    padding-top: 10px;
+    font-size: 13px;
+    font-family: 'Noto Sans KR', sans-serif;
+  }
+  
+  .icon {
+    position: fixed;
+    right: 30px;
+    top: 11px;
+    cursor: pointer;
+    z-index: 10;
+  }
 
-.logo {
-  font-family: 'Nanum Pen Script', cursive;
-  font-size: 45px;
-  margin: 0 auto;
-  color: #008e61;
-}
+} 
 
-/*상단 베너*/
-.banner {
-  position: fixed;
-  width: 100%;
-  height: 39px;
-  background-color: #008e61;
-}
-
- /*베너 텍스트*/
-p{
-  text-align: center;
-  margin: 0 auto;
-  color: white;
-  padding-top: 10px;
-  font-size: 13px;
-  font-family: 'Noto Sans KR', sans-serif;
-}
-
-.icon {
-  position: fixed;
-  right: 30px;
-  top: 11px;
-  cursor: pointer;
-}
-
+/*테블릿*/
+@media screen and (min-width:768px) and (max-width:1023px) {
+    .header {
+    position: fixed;
+    z-index: 30;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 202px;
+    background-color: #fff;
+  }
+  
+  .contents {
+    display: flex;
+    width: 95%;
+    height: 110px;
+    max-width: 1195px;
+    margin: 0 auto;
+    padding-top: 45px;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 2px solid #918D8C;
+  }
+  
+  .logo {
+    font-family: 'Nanum Pen Script', cursive;
+    font-size: 45px;
+    margin: 0 auto;
+    color: #008e61;
+  }
+  
+  /*상단 베너*/
+  .banner {
+    position: fixed;
+    width: 100%;
+    height: 39px;
+    background-color: #008e61;
+  }
+  
+   /*베너 텍스트*/
+  .banner_text{
+    text-align: center;
+    margin: 0 auto;
+    color: white;
+    padding-top: 10px;
+    font-size: 13px;
+    font-family: 'Noto Sans KR', sans-serif;
+  }
+  
+  .icon {
+    position: fixed;
+    right: 30px;
+    top: 11px;
+    cursor: pointer;
+  }
+} 
 
 /*모바일*/
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .header {
   position: fixed;
-  z-index: 1;
+  z-index: 30;
   left: 0;
   top: 0;
   width: 100%;
-  height: 202px;
-    background-color: #fff;
+  height: 150px;
+  background-color: #fff;
 }
 
   .logo {
@@ -83,11 +146,19 @@ p{
     width: 95%;
     max-width: 1100px;
     margin: 0 auto;
-    padding-top: 45px;
+    padding-top: 13px;
+    padding-bottom: 30px;
+    border-bottom: 2px solid #918D8C;
   }
-
+  /*상단 베너*/
+  .banner {
+    /* position: fixed; */
+    width: 100%;
+    height: 39px;
+    background-color: #008e61;
+  }
   /*베너 텍스트*/
-  p{
+  .banner_text{
     text-align: center;
     margin: 0 auto;
     color: white;
