--- a/src/styles/css/components/Home/NewItem.module.css
+++ b/src/styles/css/components/Home/NewItem.module.css
@@ -1,4 +1,4 @@
-/*BestItem.module.css*/
+/* NewItem.module.css */
 
 /*font*/
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&family=Noto+Sans+KR&display=swap');
@@ -257,4 +257,3 @@
     margin-right: 11px;
   }
 }
-
