--- a/src/styles/css/pages/Home.module.css
+++ b/src/styles/css/pages/Home.module.css
@@ -1,8 +1,34 @@
 /*Home.module.css*/
-.home {
-  padding-top: 80px;
+
+/* pc */
+@media screen and (min-width:1024px)  {
+  .home {
+    padding-top: 80px;
+  }
+  
+  .main {
+    min-height: calc(100vh - 180px);
+  }
 }
 
-.main {
-  min-height: calc(100vh - 180px);
+/*테블릿*/
+@media screen and (min-width:768px) and (max-width:1023px) {
+  .home {
+    padding-top: 80px;
+  }
+  
+  .main {
+    min-height: calc(100vh - 180px);
+  }
+}
+
+/*모바일*/
+@media screen and (max-width: 767px) {
+  .home {
+    padding-top: 80px;
+  }
+  
+  .main {
+    min-height: calc(100vh - 180px);
+  }
 }
