장바구니 모달 수정
중복여부도 확인 완료 / 리팩토링 필요

--- a/src/styles/css/commons/BagModal.module.css
+++ b/src/styles/css/commons/BagModal.module.css
@@ -38,10 +38,19 @@ p {
 .bag-btn {
   margin-top: 34px;
   text-align: center;
+  display: flex;
+  justify-content: center;
 }
 
 .bag-closeBtn {
   font-size: 30px;
   float: right;
   cursor: pointer;
+}
+
+.duplicate-alert {
+  display: flex;
+  justify-content: center;
+  margin-top: 60px;
+  margin-bottom: 70px;
 }
