--- a/src/styles/css/components/Category/Category.module.css
+++ b/src/styles/css/components/Category/Category.module.css
@@ -3,10 +3,12 @@
 /* pc */
 @media screen and (min-width:1024px)  {
   .category {
-    width: 1230px;
+    position: relative;
+    top: -45px;
+    width: 1200px;
     height: 200px;
     margin: 0 auto;
-    padding-top: 50px;
+    
   }
   
   .category_ul {
@@ -42,8 +44,8 @@
 @media screen and (min-width:768px) and (max-width:1023px) {
     .category {
       position: relative;
-      top: 180px;
-      width: 1000px;
+      top: -56px;
+      max-width:1200px;
       height: 200px;
       margin: 0 auto;
   }
